# daggle

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clean.sh  compile.sh  daggle.pc.in  docs.sh  install.sh  run.sh
cmake/: daggleConfig.cmake.in
docs/: Doxyfile.in
examples/: invoke_graph.c  sum_graph.c
include/: daggle.h.in
plugins/core/include/: types.h
plugins/core/plugin/: core.daggle
plugins/core/private/: node_utils.h
plugins/core/private/nodes/: input.h  math.h  output.h
plugins/core/private/types/: bool.h  bytes.h  double.h  float.h  int.h  string.h
plugins/core/src/: main.c
plugins/core/src/nodes/: input.c  math.c  output.c
plugins/core/src/types/: bool.c  bytes.c  double.c  float.c  int.c  string.c
plugins/graph/: graph.daggle  main.c
private/: data_container.h  executor.h  graph.h  instance.h  node.h  plugin_manager.h  ports.h  resource_container.h  serialization.h
private/utility/: closure.h  dynamic_array.h  hash.h  llist_queue.h  log_macro.h  return_macro.h  thread_safe_linked_queue.h
src/: api_data.c  api_dynamic_plugin.c  api_etc.c  api_execution.c  api_graph.c  api_instance.c  api_node.c  api_plugin_registration.c  api_port.c  api_tasks.c  closure.c  data_container.c  dynamic_array.c  executor.c  hash.c  llist_queue.c  node.c  plugin_manager.c  ports.c  resource_container.c  serialization.c  thread_safe_llist_queue.c
